# weichatts

./: .gitignore  README.md  pyproject.toml  run_tool.py
app/wechat_complaint_tool/: __init__.py  automation.py  batch.py  calibration.py  capture.py  config.py  detection.py  export_excel.py  gui.py  main.py  ocr_service.py  session.py  stitching.py
docs/superpowers/plans/: 2026-05-19-wechat-segment-capture-implementation.md  2026-05-24-wechat-latest-run-excel-export.md
docs/superpowers/specs/: 2026-05-19-wechat-segment-capture-design.md
tests/: conftest.py  test_automation.py  test_batch.py  test_capture_order.py  test_capture_segments.py  test_config.py  test_detection.py  test_export_excel.py  test_session.py  test_stitching.py
work/: 处理表格.xlsx
