[project]
name = "wechat-complaint-tool"
version = "0.1.0"
description = "Desktop helper for collecting complaint chat screenshots from WeChat merchant assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mss>=10.1.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pywinauto>=0.6.9",
    "rapidocr-onnxruntime>=1.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
wechat-complaint-tool = "wechat_complaint_tool.main:main"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.pytest.ini_options]
testpaths = ["tests"]
